<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.team.quattro.portfel.portfelPanel">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcomeString"
        android:id="@+id/txtWelcome"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:singleLine="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/chooseWallet"
        android:id="@+id/txtView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_marginTop="50dp">

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:id="@+id/imgBtn1Wallet"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/strBit"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:id="@+id/imgBtn2Wallet"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/strPEERCOIN" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:id="@+id/imgBtn3Wallet"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/strPLC" />
    </LinearLayout>

</LinearLayout>
