<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.team.quattro.portfel.wallet2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/balanceAccount"
        android:id="@+id/txtViewBalance"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_marginTop="50dp">

        <Button
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/imgBtnPayment"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/payment" />

        <Button
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/imgBtnWithdraw"
            android:layout_below="@+id/imgBtnPayment"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/withdraw" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_marginBottom="50dp">
        <Button
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/imgBtnStory"
            android:layout_below="@+id/imgBtnWithdraw"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/operationStory" />

        <Button
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/imgBtnExchange"
            android:layout_below="@+id/imgBtnStory"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/exchange" />
    </LinearLayout>

</LinearLayout>
